Adding content to Domus Curae project

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">In Store Revolution</h2>
+                  <h2 class="text-uppercase">In Store Rev</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/instore.png" alt="">
                   <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
@@ -568,9 +568,16 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Domus Curae</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted">A new interface between patients and doctors.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/health.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>During my first summer internship in the private hospital Clinique Pasteur of Toulouse in 2015, I have noticed that most of the patients that the doctors I was working for dealt with were old people coming for the whole day for regular check-up. They were dragged all day long from one part of the building to another in order to submit themselves to medical examinations that could have been done in their home, provided that the technology existed.</p>
+                  <p>Actually, it exists. Wireless sensors measuring data such as blood pressure and heart rate are produced and available to use. Unfortunately, they are sold separately and at a relatively high price for personal use.</p>
+                  <p>That is why I thought about a universal platform that would gather all the relevant medical data measured by a set of chosen sensors and send it back to doctors for diagnoses and potential interventions and developed a startup around this idea with my Entrepreneurship class group.</p>
+                  <p>The aim of this 2-months project was to come up with a sustainable business model and pitch it to Venture Capitalists in order to raise money. Through methodical research, benchmarking brainstorming and discussion, we eventually build an innovative business model mainly based on the following concepts:</p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/domuscurae.png" alt="">
+                  <p>The direct client would be the insurance companies. They would buy the product and service and then hand it back to doctors and patients in return of a little increase in their health insurance.</p>
+                  <p>Owing to this service, the patients would be able to stay home, save money, live longer and happier. Indeed, their health would be guaranteed - diseases prevention and recovery watch - and doctors would be able to provide more accurate care and cure for more people. Besides, insurance companies would save huge amount of money spent each year for highly expensive surgeries and treatments that could be prevented by using such device.</p>
+                  <p>The final pitch was a success: the two VC saw a real worthy opportunity there. One even offered us to help build the product if we were willing to pursue the project further. The major strength of Domus Curae was that, not only have we spotted an existing right problem, but we created this project as team, around our specific combined set of skills and networks. Consequently, it was a fascinating and considerably rewarding experience.</p>
                   <ul class="list-inline">
                     <li><h6>Date: <span>October and November 2015</span></h6></li>
                     <li><h6>Client: <span>Sophia Antipolis Venture Capitalist</span></h6></li>
