Correction of Domus Curae Subtitle in description

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Domus Curae</h2>
-                  <p class="item-intro text-muted">A new interface between patients and doctors.</p>
+                  <p class="item-intro text-muted">A new interface between patients and doctors: a startup built around remote regular check-ups for elderly patients.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/health.png" alt="">
                   <p>During my first summer internship in the private hospital Clinique Pasteur of Toulouse in 2015, I have noticed that most of the patients that the doctors I was working for dealt with were old people coming for the whole day for regular check-up. They were dragged all day long from one part of the building to another in order to submit themselves to medical examinations that could have been done in their home, provided that the technology existed.</p>
                   <p>Actually, it exists. Wireless sensors measuring data such as blood pressure and heart rate are produced and available to use. Unfortunately, they are sold separately and at a relatively high price for personal use.</p>
