Edit footer GroovyBee project

--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/domuscurae.png" alt="">
                   <p>The direct client would be the insurance companies. They would buy the product and service and then hand it back to doctors and patients in return of a little increase in their health insurance.</p>
                   <p>Owing to this service, the patients would be able to stay home, save money, live longer and happier. Indeed, their health would be guaranteed - diseases prevention and recovery watch - and doctors would be able to provide more accurate care and cure for more people. Besides, insurance companies would save huge amount of money spent each year for highly expensive surgeries and treatments that could be prevented by using such device.</p>
-                  <p>The final pitch was a success: the two VC saw a real worthy opportunity there. One even offered us to help build the product if we were willing to pursue the project further. The major strength of Domus Curae was that, not only have we spotted an existing right problem, but we created this project as team, around our specific combined set of skills and networks. Consequently, it was a fascinating and considerably rewarding experience.</p>
+                  <p>The final pitch was a success: the two VC saw a real worthy opportunity there. One even offered us to help build the product if we were willing to pursue the project further. The major strength of Domus Curae was that, not only have we spotted an existing right problem, but we created this project as team, around our specific combined set of skills and networks as well as the pilot hospital candidate. Consequently, it was a fascinating and considerably rewarding experience.</p>
                   <ul class="list-inline">
                     <li><h6>Date: <span>October and November 2015</span></h6></li>
                     <li><h6>Client: <span>Sophia Antipolis Venture Capitalist</span></h6></li>
@@ -617,12 +617,12 @@
                       <ul class="list-inline">
                         <li class="list-inline-item"><h6>Read more on:</h6></li>
                         <li class="list-inline-item">
-                          <a target="_blank" href="https://devpost.com/software/muvie">
-                            <img width="130" src="img/portfolio/devpost-logo.png" style="margin: 0px;">
+                          <a target="_blank" href="img/portfolio/MP093_GroovyBee_report.pdf">
+                            <img width="130" src="img/portfolio/pdf-icon.png" style="margin: 0px;">
                           </a>
                         </li>
                         <li class="list-inline-item">
-                          <a target="_blank" href="https://github.com/HappyBee-Junction/muvie">
+                          <a target="_blank" href="https://github.com/lauradlz/GroovyBee">
                             <img width="130" src="img/portfolio/github-octocat.png" style="margin: 0px;">
                           </a>
                         </li>
