--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Laura Deleuze</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">lauradlz</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -302,6 +302,20 @@
                 </div>
               </li>
               <li class="timeline-inverted">
+                <div class="timeline-image" style="padding:16px;background-color:#2c5c8b;">
+                  <img class="rounded-circle img-fluid" src="img/about/flygresor.png" alt="">
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h4>May 2018</h4>
+                    <h4 class="subheading">UX Engineer and mentor at Flygresor.se</h4>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted">I work as a UX designer, front end developer and mentor. I help optimize internal operations as well as enhance UX experience of websites.</p>
+                  </div>
+                </div>
+              </li>
+              <li>
                 <div class="timeline-image timeline-end">
                   <h4>Be Part
                     <br>Of Your
@@ -320,7 +334,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Scholar Curiculum</h2>
-            <h3 class="section-subheading text-muted">In August 2018, I will graduate from my joint master degree program in ICT innovation - Human Computer Interaction and Design, specialized in Advanced User Modelling with KTH and Aalto. More details can be found on my <a target="_blank" href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0" style="text-decoration:none">LinkedIn profile</a>.</h3>
+            <h3 class="section-subheading text-muted">In 2018, I graduated from my joint master degree program in ICT innovation - Human Computer Interaction and Design, specialized in Advanced User Modelling with KTH and Aalto. More details can be found on my <a target="_blank" href="https://fr.linkedin.com/in/laura-deleuze-5b7051b0" style="text-decoration:none">LinkedIn profile</a>.</h3>
           </div>
         </div>
         <div class="row">
@@ -328,27 +342,27 @@
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/aalto.png" alt="">
               <h4>Aalto School of Science</h4>
-              <p class="text-muted">Sci Master in ICT Innovation <br> <span style="font-style: italic;">Ongoing joint program</span></p>
+              <p class="text-muted">Master of Science in ICT Innovation <br> <span style="font-style: italic;">with honours</span></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/kth.svg" alt="">
               <h4>Royal Institute of Technology</h4>
-              <p class="text-muted">Sci Master in ICT Innovation <br> <span style="font-style: italic;">Ongoing joint program</span></p>
+              <p class="text-muted">Master of Science in ICT Innovation <br></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/imt.png" alt="">
               <h4>Institut Mines Telecom Atlantique</h4>
-              <p class="text-muted">Bachelor in Science of Engineering</p>
+              <p class="text-muted">Diplôme d'ingénieur de Grandes Ecoles <span style="font-style: italic;">Master of Science in Computer Science</span></p>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">I will also receive the EIT Digital Master School certificate along with the Eurecom certificate. In addition, I was awarded a project management certificate in 2016.</p>
+            <p class="large text-muted">I also received the EIT Digital Master School certificate along with the Eurecom certificate. In addition, I was awarded a project management certificate in 2016.</p>
           </div>
         </div>
       </div>
@@ -361,12 +375,12 @@
           <div class="col-md-12">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="mailto:laura.deleuze@aalto.fi">
+                <a href="mailto:laura.dlzmrtnz@gmail.com">
                   <i class="fa fa-envelope"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="mailto:laura.deleuze@aalto.fi?Subject=Request%20Phone%20Interview">
+                <a href="mailto:laura.dlzmrtnz@gmail.com?Subject=Request%20Phone%20Interview">
                   <i class="fa fa-phone"></i>
                 </a>
               </li>
@@ -380,7 +394,7 @@
         </div>
         <div class="row"  style="padding-top: 10px;">
         	<div class="col-md-12">
-            <span class="copyright">Copyright &copy; Laura's Website 2018</span>
+            <span class="copyright">Copyright &copy; Laura's Website 2021</span>
           </div>
         </div>
       </div>
@@ -426,7 +440,7 @@
                             <img width="130" src="img/portfolio/github-octocat.png" style="margin: 0px;">
                           </a>
                         </li>
-                        
+
                       </ul>
                     </div>
                   </div>
@@ -536,7 +550,6 @@
                   <h2 class="text-uppercase">In Store Rev</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/instore.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
                     <li><h6>Date: <span>October 2016</span></h6></li>
                     <li><h6>Client: <span>KTH Course IC1007 - Human computer interaction: Principles and design</span></h6></li>
@@ -611,7 +624,6 @@
                   <h2 class="text-uppercase">Groovy Bee</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/groovybee.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <div class="row">
                     <div class="col-md-12">
                       <ul class="list-inline">
@@ -626,7 +638,7 @@
                             <img width="130" src="img/portfolio/github-octocat.png" style="margin: 0px;">
                           </a>
                         </li>
-                        
+
                       </ul>
                     </div>
                   </div>
@@ -663,7 +675,6 @@
                   <h2 class="text-uppercase">Skids</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/skids.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <ul class="list-inline">
                     <li><h6>Date: <span>January to June 2017</span></h6></li>
                     <li><h6>Client: <span>KTH Course ME2073 - Business Development Lab</span></h6></li>
