add ML based marketing project

--- a/index.html
+++ b/index.html
@@ -126,6 +126,21 @@
         </div>
         <div class="row">
           <div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+                <i class="fa fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/ml-marketing.png" alt="">
+          </a>
+          <div class="portfolio-caption">
+            <h4>Data driven marketing</h4>
+            <p class="text-muted">How to design a user-friendly ML-based DSS delivering understandable and actionable insights?</p>
+            <p class="text-muted normal5">#UserResearch #ContextualInquiries #Personas #Workmodel</p>
+          </div>
+        </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
@@ -153,21 +168,6 @@
               <h4>Sunny Express</h4>
               <p class="text-muted">Dynamic Web App: Choose your ideal holiday location based on weather</p>
               <p class="text-muted normal5">#UX #UI #DesignThinking #WebProgramming</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/instore.png" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4>In Store Revolution</h4>
-              <p class="text-muted">Design of a system enhancing the retail store fitting room experience</p>
-              <p class="text-muted normal5">#UX #UI #DesignThinking</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -201,18 +201,18 @@
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
-            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
               <div class="portfolio-hover">
                 <div class="portfolio-hover-content">
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/skids.png" alt="">
+              <img class="img-fluid" src="img/portfolio/instore.png" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4>Skids</h4>
-              <p class="text-muted">Startup built around enhanced children security in outdoors activities in kindergarten</p>
-              <p class="text-muted normal5">#LeanStartup #BusinessModel #StartupPitch</p>
+              <h4>In Store Revolution</h4>
+              <p class="text-muted">Design of a system enhancing the retail store fitting room experience</p>
+              <p class="text-muted normal5">#UX #UI #DesignThinking</p>
             </div>
           </div>
         </div>
@@ -311,7 +311,7 @@
                     <h4 class="subheading">UX Engineer and mentor at Flygresor.se</h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">I work as a UX designer, front end developer and mentor. I help optimize internal operations as well as enhance UX experience of websites.</p>
+                    <p class="text-muted">I work as a UX designer, front end developer and mentor at Flygresor, part of the eTraveli group. I help optimize internal operations as well as enhance UX experience of websites.</p>
                   </div>
                 </div>
               </li>
@@ -672,13 +672,67 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Skids</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/skids.png" alt="">
+                  <h2 class="text-uppercase">Data driven marketing</h2>
+                  <p class="item-intro text-muted">
+                    I was hired by Pond - PWC Expirience Center, to help their data scientist understand marketers behaviours and job to identify where Econometric modelling would be relevant for them to use on a daily basis.
+                  </p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/ml-marketing.png" alt="">
+                  <p>
+                    Owing to the Machine Learning spread, in particular the Econometric modelling progress, marketers are now able to daily monitor and control
+                    the marketing effect of their campaigns, thus optimising their advertising investments. Although several decision support tools and Data analysts
+                    consultants currently provide marketers with these data-driven insights, only few manage to understand the algorithms outcomes and act upon the extracted
+                    insights on their own. Therefore, my master thesis focused on answerig this critical question: How to design a user- friendly ML-based decision support
+                    system (DSS) delivering understandable insights that marketers act upon?
+                  </p>
+                  <p>
+                    The then current delivery of data-driven insights to marketers at Pond - PWC Expirience Center was either too complex or too simple. As a result, most marketers failed
+                    to identify useful and relevant information from the analysis of their own customers data without the support of their data analyst consultants. Besides, the models were
+                    based on three-year-old data and only updated once to three times per year. Thus, marketers considered their outcomes seldom representative of the current market state in
+                    the long run. As a matter of fact, this user research I conducted centered around an exisiting algorithm showed that marketers would rather have a computer based test
+                    environment relying on regular model updates than occasional PowerPoint presentations.
+                  </p>
+                  <p>
+                    The user research consisted in a manifest and a latent content analysis of semi-structured interviews conducted as rigorous Contextual Design Inquiries with 11 marketers
+                    familiar with Econometric modelling. The extracted patterns were then validated through a second round of interviews and eventually produced four representative set of
+                    marketers work-models and personas.
+                  </p>
+                  <img class="img-fluid d-inline-block" src="img/portfolio/personas.png" alt="" style="width:46%;margin-right:6%">
+                  <img class="img-fluid d-inline-block" src="img/portfolio/workmodels.png" alt="" style="width:46%;">
+                  <p>
+                    The latent analysis all showed that all interviewees were already convinced and trusting the insights provided by Econometrics modelling.
+                    They even considered them business relevant and essential in their daily job. This hinted that only a small step was required to bring customised Machine-learning outcomes
+                    and data-driven insights to the reach of not only marketers but any non data scientist specialist.
+                  </p>
+                  <p>
+                    Thus, these 11 deep interviews all contributed to identify the three main tasks the digital tool must accomplish to help marketers. First, it should display a centralised overview
+                    of what is currently happening in the market and how their marketing strategies are doing. Second, the tool should contribute to optimise their marketing budget in the aim
+                    to reach the marketers company business goals. Third, it has to enhance the communication between the marketers, their media agency and their top-management team. By realising
+                    these three jobs through a portable, pertinent and task compliant user-centered tool, the data-driven tool would then constitute a major business asset for the marketers company.
+                    Not only would it dramatically increase the efficiency and profitability of marketing activities along with the business managers trust in marketing benefits, but it would also
+                    empower marketers to accurately control their budget marketing effect and negotiate their costs down with media channel publishers for instance.
+                  </p>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <ul class="list-inline">
+                        <li class="list-inline-item"><h6>Read more on:</h6></li>
+                        <li class="list-inline-item">
+                          <a target="_blank" href="img/portfolio/FINAL-MT-presentation_Deleuze-ANIMATED.pdf">
+                            <img width="40" src="img/portfolio/presentation-icon.png" style="margin: 0px;">
+                          </a>
+                        </li>
+                        <li class="list-inline-item">
+                          <a target="_blank" href="img/portfolio/SCI_2018_deleuze_laura.pdf">
+                            <img width="130" src="img/portfolio/pdf-icon.png" style="margin: 0px;">
+                          </a>
+                        </li>
+
+                      </ul>
+                    </div>
+                  </div>
                   <ul class="list-inline">
-                    <li><h6>Date: <span>January to June 2017</span></h6></li>
-                    <li><h6>Client: <span>KTH Course ME2073 - Business Development Lab</span></h6></li>
-                    <li><h6>Category: <span>Lean Startup, Business Model, Startup Pitch</span></h6></li>
+                    <li><h6>Date: <span>January to July 2018</span></h6></li>
+                    <li><h6>Clients: <span>Pond - PWC Expirience Center & Aalto</span></h6></li>
+                    <li><h6>Category: <span>User research, personas, workmodels, Master thesis</span></h6></li>
                   </ul>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
