Add in store rev project content

--- a/index.html
+++ b/index.html
@@ -548,8 +548,34 @@
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">In Store Rev</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                  <p class="item-intro text-muted">A revolutionaty tool for sales clerks in clothes retail stores to help them in their daily work</p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/instore.png" alt="">
+                  <p>
+                    As part of one of our design class, we created a 4 designers to be team to enhance the retail worker experience. To do so, our design team first individually observed
+                    and interviewed several sellers in different stores located in Stockholm city centers such and H&M, Lindex, Indiska and Dressman.
+                  </p>
+                  <p>
+                    Afterwards, we gathered all our observations and categorizes them in order to identify the main pain points retail workers were experiencing in their daily work life.
+                  </p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/store-observations.png" alt="">
+                  <p>
+                    We eventually unearthed together major pain points which mainly revolved arount logistic and time management.
+                  </p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/pain-points.png" alt="">
+                  <p>
+                    In order to adress these issues, we breainstormed ideas and created low fidelity prototypes.
+                  </p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/paper-prototype.png" alt="">
+                  <p>
+                    Once we produced a satisfying solution, we created a higher fidelity version of our selected prototypes. We then returned to the stores and tested our products
+                    with sales clerk. We refined device based on their feebacks. We iterated this procedure three times.
+                  </p>
+                  <img class="img-fluid d-block mx-auto" src="img/portfolio/mvp-test.png" alt="">
+                  <p>
+                    It was an extremaly enriching experience to walk in a UX designer shoes and be thrown in the field. Our team faced several challenges that mad us grow. In particular,
+                    reaching out to sales clerks to get interviews and to test our high fidelity prototype was more challenging than we first expected and therefore certain compromises had to be made.
+                    We, for instance, could not test our prototypes in real life use situations. We also had to have a set of predefined tasks so that the reviews were as time efficient as possible for the testers.
+                  </p>
                   <ul class="list-inline">
                     <li><h6>Date: <span>October 2016</span></h6></li>
                     <li><h6>Client: <span>KTH Course IC1007 - Human computer interaction: Principles and design</span></h6></li>
@@ -719,9 +745,11 @@
                     environment relying on regular model updates than occasional PowerPoint presentations.
                   </p>
                   <p>
-                    The user research consisted in a manifest and a latent content analysis of semi-structured interviews conducted as rigorous Contextual Design Inquiries with 11 marketers
-                    familiar with Econometric modelling. The extracted patterns were then validated through a second round of interviews and eventually produced four representative set of
-                    marketers work-models and personas.
+                    The user research consisted a content analysis of semi-structured interviews conducted as rigorous Contextual Design Inquiries with 11 marketers
+                    familiar with Econometric modelling. When authorized, I recorded then transcibed every interviews. The transcripts and personal notes taken live from the interviews were then
+                    rigorously analysed according to two methodologies: a manifest content analysis to unnderstand their work dynamics and a latent content analysis to shed light on why
+                    they need data insights. The extracted patterns were then validated through a second round of interviews and eventually produced four representative set of marketers
+                    work-models and personas.
                   </p>
                   <img class="img-fluid d-inline-block" src="img/portfolio/personas.png" alt="" style="width:46%;margin-right:6%">
                   <img class="img-fluid d-inline-block" src="img/portfolio/workmodels.png" alt="" style="width:46%;">
